--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,7 @@ django-storages==1.12.3
 gunicorn==20.1.0
 jmespath==1.0.1
 oauthlib==3.2.0
+Pillow==9.1.1
 psycopg2-binary==2.9.3
 PyJWT==2.4.0
 python-dotenv==0.20.0
